--- a/index.html
+++ b/index.html
@@ -1297,8 +1297,8 @@ series.labels.template.maxWidth = 60;
 series.labels.template.wrap = true;
 */
 series.labels.template.bent = true;
-series.renderer.labels.template.padding(0,0,0,0);
-series.renderer.labels.template.radius = 15;
+series.labels.template.padding(0,0,0,0);
+series.labels.template.radius = 15;
 
 series.colors.list = [
     new am4core.color('blue').lighten(0.3),
