--- a/index.html
+++ b/index.html
@@ -1309,6 +1309,8 @@ series.labels.template.text = "{category} {value.percent.formatNumber('#.')}%";
 /*
 chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
 */
+
+chart.legend = new am4charts.Legend();
 chart.exporting.menu = new am4core.ExportMenu();
 chart.exporting.menu.align = "left";
 chart.exporting.menu.verticalAlign = "top";
