--- a/index.html
+++ b/index.html
@@ -1311,6 +1311,7 @@ chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
 */
 
 chart.legend = new am4charts.Legend();
+chart.legend.fontSize = 10;
 chart.exporting.menu = new am4core.ExportMenu();
 chart.exporting.menu.align = "left";
 chart.exporting.menu.verticalAlign = "top";
