--- a/index.html
+++ b/index.html
@@ -1291,15 +1291,14 @@ series.alignLabels = false;
 
 series.hiddenState.properties.startAngle = 90;
 series.hiddenState.properties.endAngle = 90;
-series.labels.template.fontSize = 10;
 /*
+series.labels.template.fontSize = 10;
 series.labels.template.maxWidth = 60;
 series.labels.template.wrap = true;
-*/
 series.labels.template.bent = true;
 series.labels.template.padding(0,0,0,0);
 series.labels.template.radius = 15;
-
+*/
 series.colors.list = [
     new am4core.color('blue').lighten(0.3),
     new am4core.color('purple').lighten(0.3),
@@ -1312,6 +1311,7 @@ chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
 
 chart.legend = new am4charts.Legend();
 chart.legend.fontSize = 10;
+chart.legend.maxHeight = 50;
 chart.exporting.menu = new am4core.ExportMenu();
 chart.exporting.menu.align = "left";
 chart.exporting.menu.verticalAlign = "top";
