--- a/index.html
+++ b/index.html
@@ -1306,7 +1306,7 @@ series.colors.list = [
     new am4core.color('purple').lighten(0.3),
     new am4core.color('green').lighten(0.3)
 ];
-
+chart.labelsEnabled = false;
 chart.legend = new am4charts.Legend();
 chart.legend.fontSize = 10;
 chart.legend.maxHeight = 50;
