--- a/index.html
+++ b/index.html
@@ -1311,10 +1311,11 @@ series.colors.list = [
 ];
 
 chart.legend = new am4charts.Legend();
-
+chart.legend.markers.width = 10;
+chart.legend.markers.height = 10;
 chart.legend.fontSize = 10;
 chart.legend.maxHeight = 50;
-chart.legend.maxWidth = 200;
+chart.legend.maxWidth = 150;
 chart.exporting.menu = new am4core.ExportMenu();
 chart.exporting.menu.align = "left";
 chart.exporting.menu.verticalAlign = "top";
