--- a/index.html
+++ b/index.html
@@ -1311,11 +1311,11 @@ series.colors.list = [
 ];
 
 chart.legend = new am4charts.Legend();
-chart.legend.markers.width = 5;
-chart.legend.markers.height = 5;
+chart.legend.markers.template.width = 5;
+chart.legend.markers.template.height = 5;
 chart.legend.fontSize = 10;
 chart.legend.maxHeight = 50;
-chart.legend.maxWidth = 150;
+chart.legend.maxWidth = 50;
 chart.exporting.menu = new am4core.ExportMenu();
 chart.exporting.menu.align = "left";
 chart.exporting.menu.verticalAlign = "top";
