--- a/index.html
+++ b/index.html
@@ -1314,8 +1314,8 @@ chart.legend = new am4charts.Legend();
 chart.legend.markers.template.width = 15;
 chart.legend.markers.template.height = 15;
 chart.legend.fontSize = 10;
-chart.legend.maxHeight = 20;
-chart.legend.maxWidth = 20;
+chart.legend.maxHeight = 30;
+chart.legend.maxWidth = undefined;
 chart.exporting.menu = new am4core.ExportMenu();
 chart.exporting.menu.align = "left";
 chart.exporting.menu.verticalAlign = "top";
