--- a/index.html
+++ b/index.html
@@ -1316,7 +1316,7 @@ chart.legend.markers.template.height = 15;
 chart.legend.fontSize = 10;
 chart.legend.maxHeight = 30;
 chart.legend.maxWidth = undefined;
-chart.legend.template.text = "{category}";
+chart.legend.labels.template.text = "{category}";
 	
 chart.exporting.menu = new am4core.ExportMenu();
 chart.exporting.menu.align = "left";
