--- a/index.html
+++ b/index.html
@@ -1290,7 +1290,7 @@ series.slices.template.inert = true;
 series.alignLabels = false;
 series.labels.template.disabled = true;
 series.ticks.template.disabled = true;
-
+series.legendSettings.labelText = "{category}";
 
 series.hiddenState.properties.startAngle = 90;
 series.hiddenState.properties.endAngle = 90;
@@ -1316,7 +1316,6 @@ chart.legend.markers.template.height = 15;
 chart.legend.fontSize = 10;
 chart.legend.maxHeight = 30;
 chart.legend.maxWidth = undefined;
-chart.legend.labels.template.text = "{category}";
 	
 chart.exporting.menu = new am4core.ExportMenu();
 chart.exporting.menu.align = "left";
