--- a/index.html
+++ b/index.html
@@ -1291,6 +1291,7 @@ series.alignLabels = false;
 series.labels.template.disabled = true;
 series.ticks.template.disabled = true;
 series.legendSettings.labelText = "{category}";
+chart.legend.valueLabels.template.disabled = true ;
 
 series.hiddenState.properties.startAngle = 90;
 series.hiddenState.properties.endAngle = 90;
