--- a/index.html
+++ b/index.html
@@ -1291,7 +1291,6 @@ series.alignLabels = false;
 series.labels.template.disabled = true;
 series.ticks.template.disabled = true;
 series.legendSettings.labelText = "{category}";
-series.legendSettings.valueLabels.template.disabled = true ;
 
 series.hiddenState.properties.startAngle = 90;
 series.hiddenState.properties.endAngle = 90;
@@ -1317,6 +1316,7 @@ chart.legend.markers.template.height = 15;
 chart.legend.fontSize = 10;
 chart.legend.maxHeight = 30;
 chart.legend.maxWidth = undefined;
+chart.legend.valueLabels.template.disabled = true;
 	
 chart.exporting.menu = new am4core.ExportMenu();
 chart.exporting.menu.align = "left";
