--- a/index.html
+++ b/index.html
@@ -1294,16 +1294,16 @@ series.legendSettings.labelText = "{category}";
 
 series.hiddenState.properties.startAngle = 90;
 series.hiddenState.properties.endAngle = 90;
-/*
+
 series.labels.template.fontSize = 10;
 series.labels.template.maxWidth = 60;
 series.labels.template.wrap = true;
 series.labels.template.bent = true;
 series.labels.template.padding(0,0,0,0);
 series.labels.template.radius = 15;
-series.labels.template.text = "{category} {value.percent.formatNumber('#.')}%";
+series.labels.template.text = "{value.percent.formatNumber('#.')}%";
 chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
-*/
+
 series.colors.list = [
     new am4core.color('blue').lighten(0.3),
     new am4core.color('purple').lighten(0.3),
