--- a/index.html
+++ b/index.html
@@ -1318,6 +1318,10 @@ chart.legend.fontSize = 10;
 chart.legend.maxHeight = 30;
 chart.legend.maxWidth = undefined;
 chart.legend.valueLabels.template.disabled = true;
+chart.legend.itemContainers.template.paddingTop = 2;
+chart.legend.itemContainers.template.paddingBottom = 2;
+chart.legend.itemContainers.template.paddingLeft = 2;
+chart.legend.itemContainers.template.paddingRight = 2;
 	
 chart.exporting.menu = new am4core.ExportMenu();
 chart.exporting.menu.align = "left";
