--- a/index.html
+++ b/index.html
@@ -1286,7 +1286,7 @@ chart.data = [
   {
     zone: "influence autres CS",
     value: inside.features.length,
-    labelColor: new am4core.color('purple').lighten(0.3)
+    labelColor: new am4core.color('#875692')
   },
   {
     zone: "hors influence",
@@ -1322,7 +1322,7 @@ chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
 
 series.colors.list = [
     new am4core.color('blue').lighten(0.3),
-    new am4core.color('purple').lighten(0.3),
+    new am4core.color('#875692'),
     new am4core.color('green').lighten(0.3)
 ];
 
