--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@ chart.data = [
     type_quartier: "Autres",
     value: (adresses_turf.length - adresses_NQPV.features.length
 	- adresses_QVA.features.length - adresses_AQV.features.length),
-    labelColor: new am4core.color('blue').lighten(0.3)
+    labelColor: new am4core.color('#0067A5')
   }
 ];
 chart.radius = am4core.percent(50);
@@ -665,7 +665,7 @@ series.colors.list = [
     new am4core.color('black').lighten(0.3),
     new am4core.color('#f4c430').lighten(0.3),
     new am4core.color('purple').lighten(0.3),
-    new am4core.color('blue').lighten(0.3)
+    new am4core.color('#0067A5')
 ];
 
 chart.legend = new am4charts.Legend();
@@ -864,7 +864,7 @@ chart.data = [
   {
     zone: "entre 15 et 30 min",
     value: PS[3].length,
-    labelColor: new am4core.color('orange').lighten(0.3)
+    labelColor: new am4core.color('#F38400')
   },
   {
     zone: "+ de 30 min",
@@ -898,10 +898,10 @@ series.labels.template.radius = 15;
 series.labels.template.text = "{value.percent.formatNumber('#.')}%";
 chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
 series.colors.list = [
-    new am4core.color('blue').lighten(0.3),
+    new am4core.color('#0067A5'),
     new am4core.color('green').lighten(0.3),
     new am4core.color('#f4c430').lighten(0.3),
-    new am4core.color('orange').lighten(0.3),
+    new am4core.color('#F38400'),
     new am4core.color('red').lighten(0.3)
 ];
 
@@ -1281,7 +1281,7 @@ chart.data = [
   {
     zone: "influence 20ème Chaise",
     value: inside_20C.features.length,
-    labelColor: new am4core.color('blue').lighten(0.3)
+    labelColor: new am4core.color('#0067A5')
   },
   {
     zone: "influence autres CS",
@@ -1321,7 +1321,7 @@ series.labels.template.text = "{value.percent.formatNumber('#.')}%";
 chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
 
 series.colors.list = [
-    new am4core.color('blue').lighten(0.3),
+    new am4core.color('#0067A5'),
     new am4core.color('#875692'),
     new am4core.color('green').lighten(0.3)
 ];
