--- a/index.html
+++ b/index.html
@@ -1044,18 +1044,20 @@ turf.pointsWithinPolygon(
  turf.points(points_turf), 
  ZI_20C.toGeoJSON()
   );
-  
+ 
+var points_ZI_20C = [];
 for (let i=0 ; i < inside_20C.features.length; i++)
 {
 var coords = [];
 coords[0] = inside_20C.features[i].geometry.coordinates[1];
-coords[1] = inside_20C.features[i].geometry.coordinates[0];	
+coords[1] = inside_20C.features[i].geometry.coordinates[0];
+points_ZI_20C.push(coords);
 L.circleMarker(coords, {radius: 2, color : 'blue'}).addTo(map_3);
 };
 
 // on met à jour le tableau d'adresses en lui ôtant les adresses contenues dans la zone 20ème Chaise pour alléger les traitement à venir
 console.log(points_turf);
-console.log(inside_20C.features);
+console.log(points_ZI_20C);
 
 // on ajoute des éléments CSS pour générer des tooltips sur mesure pour les CS
 var TooltipClass = {
