--- a/index.html
+++ b/index.html
@@ -1059,7 +1059,7 @@ points_ZI_20C.push(coords.reverse());
 // on met à jour le tableau d'adresses en lui ôtant les adresses contenues dans la zone 20ème Chaise pour alléger les traitement à venir
 console.log(points_turf);
 console.log(points_ZI_20C);
-console.log(points_turf.includes(points_ZI_20C[0]);
+console.log(points_turf.includes(points_ZI_20C[0]));
 let points_turf_new = points_turf.filter(x => !points_ZI_20C.includes(x));
 console.log(points_turf_new);
 	
