--- a/index.html
+++ b/index.html
@@ -1059,11 +1059,8 @@ points_ZI_20C.push(coords.reverse());
 
 // on met à jour le tableau d'adresses en lui ôtant les adresses contenues dans la zone 20ème Chaise pour alléger les traitement à venir
 console.log(points_turf);
-console.log(JSON.stringify(points_ZI_20C));
-console.log(points_turf.some(a => points_ZI_20C[0].every((v, i) => v === a[i])));
+console.log(points_ZI_20C);
 console.log(points_turf.filter(function(item) {return !JSON.stringify(points_ZI_20C).includes(JSON.stringify(item)); }));
-let points_turf_new = points_turf.filter(x => !points_ZI_20C.includes(x));
-console.log(points_turf_new);
 	
 // on ajoute des éléments CSS pour générer des tooltips sur mesure pour les CS
 var TooltipClass = {
