--- a/index.html
+++ b/index.html
@@ -1060,7 +1060,7 @@ points_ZI_20C.push(coords.reverse());
 // on met à jour le tableau d'adresses en lui ôtant les adresses contenues dans la zone 20ème Chaise pour alléger les traitement à venir
 console.log(points_turf);
 console.log(points_ZI_20C);
-console.log(points_turf.filter(function(item) {return !JSON.stringify(points_ZI_20C).includes(JSON.stringify(item)); }));
+points_turf = points_turf.filter(function(item) {return !JSON.stringify(points_ZI_20C).includes(JSON.stringify(item)); });
 	
 // on ajoute des éléments CSS pour générer des tooltips sur mesure pour les CS
 var TooltipClass = {
