--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@ series.labels.template.wrap = true;
 series.labels.template.bent = true;
 series.labels.template.padding(0,0,0,0);
 series.labels.template.radius = 15;
-series.labels.template.text = "{value.percent.formatNumber('#.')}%";
+series.labels.template.text = "{[bold] value.percent.formatNumber('#.')}% [/]";
 chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
 series.colors.list = [
     new am4core.color('black'),
@@ -890,13 +890,13 @@ series.alignLabels = false;
 series.hiddenState.properties.startAngle = 90;
 series.hiddenState.properties.endAngle = 90;
 
-series.labels.template.fontSize = 10;
+series.labels.template.fontSize = 12;
 series.labels.template.maxWidth = 60;
 series.labels.template.wrap = true;
 series.labels.template.bent = true;
 series.labels.template.padding(0,0,0,0);
 series.labels.template.radius = 15;
-series.labels.template.text = "{value.percent.formatNumber('#.')}%";
+series.labels.template.text = "{[bold] value.percent.formatNumber('#.')}% [/]";
 chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
 series.colors.list = [
     new am4core.color('#0067A5'),
@@ -1322,13 +1322,13 @@ series.alignLabels = false;
 series.hiddenState.properties.startAngle = 90;
 series.hiddenState.properties.endAngle = 90;
 
-series.labels.template.fontSize = 10;
+series.labels.template.fontSize = 12;
 series.labels.template.maxWidth = 60;
 series.labels.template.wrap = true;
 series.labels.template.bent = true;
 series.labels.template.padding(0,0,0,0);
 series.labels.template.radius = 15;
-series.labels.template.text = "{value.percent.formatNumber('#.')}%";
+series.labels.template.text = "{[bold] value.percent.formatNumber('#.')}%[/]";
 chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
 
 series.colors.list = [
