--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@ series.labels.template.wrap = true;
 series.labels.template.bent = true;
 series.labels.template.padding(0,0,0,0);
 series.labels.template.radius = 15;
-series.labels.template.text = "{[bold] value.percent.formatNumber('#.')}% [/]";
+series.labels.template.text = "[bold]{value.percent.formatNumber('#.')}%[/]";
 chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
 series.colors.list = [
     new am4core.color('black'),
@@ -896,7 +896,7 @@ series.labels.template.wrap = true;
 series.labels.template.bent = true;
 series.labels.template.padding(0,0,0,0);
 series.labels.template.radius = 15;
-series.labels.template.text = "{[bold] value.percent.formatNumber('#.')}% [/]";
+series.labels.template.text = "[bold]{value.percent.formatNumber('#.')}%[/]";
 chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
 series.colors.list = [
     new am4core.color('#0067A5'),
@@ -1328,7 +1328,7 @@ series.labels.template.wrap = true;
 series.labels.template.bent = true;
 series.labels.template.padding(0,0,0,0);
 series.labels.template.radius = 15;
-series.labels.template.text = "{[bold] value.percent.formatNumber('#.')}%[/]";
+series.labels.template.text = "[bold]{value.percent.formatNumber('#.')}%[/]";
 chart.series.getIndex(0).labels.template.propertyFields.fill = "labelColor";
 
 series.colors.list = [
