--- a/index.html
+++ b/index.html
@@ -1376,7 +1376,7 @@ chart.data = donnees_graphe_CS;
 
 var categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
 categoryAxis.renderer.grid.template.location = 0;
-categoryAxis.dataFields.category = "nom_cs";
+categoryAxis.dataFields.category = "[bold]nom_cs[/]";
 categoryAxis.renderer.labels.template.location = 0.5;
 categoryAxis.renderer.grid.template.strokeOpacity = 0.08;
 categoryAxis.renderer.tooltipLocation = 0.5;
@@ -1456,7 +1456,7 @@ chart.data = donnees_graphe_2_CS;
 
 var categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
 categoryAxis.renderer.grid.template.location = 0;
-categoryAxis.dataFields.category = "nom_cs";
+categoryAxis.dataFields.category = "[bold]nom_cs[/]";
 categoryAxis.renderer.labels.template.location = 0.5;
 categoryAxis.renderer.grid.template.strokeOpacity = 0.08;
 categoryAxis.renderer.tooltipLocation = 0.5;
