--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ else if (document.getElementById('bene_non').checked)
 		string_filtre += ' && ' ;
 		string_filtre += 'element.bene' + ' == ' + '0' ;
 		}
-string_comment_bene = '- Au moins un membre de la famille bénévole.' ; 
+string_comment_bene = '- Aucun membre de la famille bénévole.' ; 
 }
 else
 {
