--- a/index.html
+++ b/index.html
@@ -1397,6 +1397,7 @@ categoryAxis.tooltip.disabled = true;
 categoryAxis.renderer.labels.template.bent = true;
 categoryAxis.renderer.labels.template.padding(0,0,0,0);
 categoryAxis.renderer.labels.template.radius = 7;
+categoryAxis.renderer.labels.template.bold = true;	
 
 var valueAxis = chart.yAxes.push(new am4charts.ValueAxis());
 valueAxis.min = 0;
