--- a/index.html
+++ b/index.html
@@ -467,6 +467,10 @@ tableau_sortie.forEach(function(element)
 					 )
 			}
 		      )
+for (let i=0 ; i < part_croisee.length; i++)
+	{
+	console.log(part_croisee[i]);
+	}
 }
 	
 </script>
