--- a/index.html
+++ b/index.html
@@ -460,9 +460,9 @@ if (JSON.parse(localStorage.getItem("btn_click")) === false)
 part_croisee = [];
 tableau_sortie.forEach(function(element)
 		       {
-			
+			console.log(element);
 			type_act.forEach(function(act,index)
-					 {
+					{
 					part_croisee[index] += (element.act > 0 ? 1 : 0);
 					}
 					 )
