--- a/index.html
+++ b/index.html
@@ -461,8 +461,9 @@ part_croisee = [];
 tableau_sortie.forEach(function(element)
 		       {
 			console.log(element);
-			type_act.forEach(function(act,index)
+			type_act.forEach(function(act,index,key)
 					{
+					console.log(key);
 					part_croisee[index] += (element.act > 0 ? 1 : 0);
 					}
 					 )
