--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ tableau_sortie.forEach(function(element)
 			console.log(element);
 			type_act.forEach(function(act,index,key)
 					{
-					console.log(key);
+					console.log(key[index]);
 					part_croisee[index] += (element.act > 0 ? 1 : 0);
 					}
 					 )
