--- a/index.html
+++ b/index.html
@@ -464,7 +464,8 @@ tableau_sortie.forEach(function(element)
 			type_act.forEach(function(act,index,key)
 					{
 					console.log(key[index]);
-					part_croisee[index] += (element.act > 0 ? 1 : 0);
+				        var donnees = 'element' + '.' + key[index] ;
+					part_croisee[index] += JSON.parse(donnees) > 0 ? 1 : 0);
 					}
 					 )
 			}
