--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ tableau_sortie.forEach(function(element)
 					{
 					console.log(key[index]);
 				        var donnees = 'element' + '.' + key[index] ;
-					part_croisee[index] += JSON.parse(donnees) > 0 ? 1 : 0);
+					part_croisee[index] += (JSON.parse(donnees) > 0 ? 1 : 0);
 					}
 					 )
 			}
