--- a/index.html
+++ b/index.html
@@ -465,6 +465,8 @@ tableau_sortie.forEach(function(element)
 					{
 					console.log(key[index]);
 				        var donnees = 'element' + '.' + key[index] ;
+					console.log(donnees);
+					console.log(JSON.parse(donnees));
 					part_croisee[index] += (JSON.parse(donnees) > 0 ? 1 : 0);
 					}
 					 )
