--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ tableau_sortie.forEach(function(element)
 		       {
 			type_act.forEach(function(act,index,key)
 					{
-				        eval('element' + '.' + key[index]);
+				        console.log(eval('element' + '.' + key[index]));
 					}
 					 )
 			}
