--- a/index.html
+++ b/index.html
@@ -462,7 +462,8 @@ tableau_sortie.forEach(function(element)
 		       {
 			type_act.forEach(function(act,index,key)
 					{
-				        part_croisee[index] += (eval('element' + '.' + key[index]) > 0 ? 1 : 0);
+					var donnees = eval('element' + '.' + key[index]);
+				        part_croisee[index] += ( donnees > 0 ? 1 : 0);
 					}
 					 )
 			}
