--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ if (JSON.parse(localStorage.getItem("btn_click")) === false)
 	}
 
 // on génère les éléments de participation croisée aux différentes activités
-part_croisee = [];
+part_croisee = [0,0,0,0,0,0,0,0,0,0,0,0];
 tableau_sortie.forEach(function(element)
 		       {
 			type_act.forEach(function(act,index,key)
