--- a/index.html
+++ b/index.html
@@ -457,13 +457,17 @@ if (JSON.parse(localStorage.getItem("btn_click")) === false)
 	}
 
 // on génère les éléments de participation croisée aux différentes activités
-part_croisee = [0,0,0,0,0,0,0,0,0,0,0,0];
+var part_croisee = [0,0,0,0,0,0,0,0,0,0,0,0];
+var type_act_2 = type_act;
 tableau_sortie.forEach(function(element)
 		       {
 			type_act.forEach(function(act,index,key)
 					{
-					var donnees = eval('element' + '.' + key[index]);
-				        part_croisee[index] += ( donnees > 0 ? 1 : 0);
+				 	type_act_2.forEach(function(act,index,key)
+						{
+					var donnees = eval('element' + '.' + key[type_act.index]);
+					var donnees_2 =  eval('element' + '.' + key[type_act_2.index]);
+				        part_croisee[index] += ( donnees > 0 && donnees_2 > 0 ? 1 : 0);
 					}
 					 )
 			}
